--- a/src/login/styles/login.css
+++ b/src/login/styles/login.css
@@ -41,13 +41,13 @@
 }
 
 .logo {
-  margin-block: 70px 45px;
+  margin-block: 4.375rem 2.8125rem;
 
   display: flex;
   justify-content: center;
 
   svg {
-    width: 14.375rem;
+    width: 230px;
   }
 }
 
@@ -77,7 +77,7 @@ form {
   input {
     border: 1px solid var(--silver);
     padding-left: var(--spacing-15);
-    padding-block: 14px 13px;
+    padding-block: 0.875rem 0.8125rem;
     box-sizing: border-box;
     background: none;
     font-size: var(--text-14);
@@ -106,8 +106,8 @@ form {
     color: var(--white);
     font-weight: 700;
     width: 100%;
-    margin: 0 20px;
-    padding-block: 16px;
+    margin: 0 1.25rem;
+    padding-block: 1rem;
     cursor: pointer;
 
     @media (width >= 768px) {
@@ -119,7 +119,7 @@ form {
 
 .errorMessage {
   display: none;
-  margin-block: 7px 0;
+  margin-block: 0.4375rem 0;
   color: var(--error-red);
   font-size: var(--text-12);
   line-height: 1.125rem;
@@ -140,7 +140,7 @@ input:valid + .errorMessage {
   --text-color: var(--dark-black);
 
   display: inline-flex;
-  gap: 8px;
+  gap: 0.5rem;
   cursor: pointer;
   margin-top: var(--spacing-10);
   margin-left: var(--spacing-15);
@@ -207,7 +207,7 @@ input:checked ~ .checked {
     text-align: right;
     text-decoration: none;
 
-    font-size: 14px;
+    font-size: var(--text-14);
     font-weight: 400;
     line-height: 1.5;
   }
